samples/_failures_safe/1761175629_782d4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0124d045.c: In function ‘main’:
./samples/SAFE/__tmp_0124d045.c:133:32: error: missing terminating " character
  133 |                         printf("Multiplication overflow detected\n
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected expression at end of input
  133 |                         printf("Multiplication overflow detected\n
      |                         ^~~~~~
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0124d045.c:133:25: error: expected declaration or statement at end of input
